feat(personal): change lot price (#49)
* chore(personal): start change lot price implementation

* chore(personal): add PUT /lots/{id}/change-price method

* feat(personal): implement change lot price method

* feat(personal): implement payment, invoice endpoints for lot price changing

* chore(personal): add onPaymentChange handler

* chore(personal): add detailed description to change lot price method

* refactor(personal): change names for change price methods

* feat(personal): change lot pirce

* fix ci.yml

* chore(personal): final preparations

* lint(personal): resolve golangci-lint errors
