# api/gen/models/change_price_invoice.go
@@ -1,0 +1,241 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"encoding/json"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// ChangePriceInvoice change price invoice
+//
+// swagger:model ChangePriceInvoice
+type ChangePriceInvoice struct {
+
+	// lot
+	// Required: true
+	Lot *OwnedLot `json:"lot"`
+
+	// price
+	// Required: true
+	Price *Money `json:"price"`
+
+	// gateways
+	// Required: true
+	Gateways []string `json:"gateways"`
+
+	// cashier
+	Cashier *ChangePriceInvoiceCashier `json:"cashier,omitempty"`
+}
+
+// Validate validates this change price invoice
+func (m *ChangePriceInvoice) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateLot(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validatePrice(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateGateways(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateCashier(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ChangePriceInvoice) validateLot(formats strfmt.Registry) error {
+
+	if err := validate.Required("lot", "body", m.Lot); err != nil {
+		return err
+	}
+
+	if m.Lot != nil {
+		if err := m.Lot.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("lot")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (m *ChangePriceInvoice) validatePrice(formats strfmt.Registry) error {
+
+	if err := validate.Required("price", "body", m.Price); err != nil {
+		return err
+	}
+
+	if m.Price != nil {
+		if err := m.Price.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("price")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+var changePriceInvoiceGatewaysItemsEnum []interface{}
+
+func init() {
+	var res []string
+	if err := json.Unmarshal([]byte(`["interkassa","direct"]`), &res); err != nil {
+		panic(err)
+	}
+	for _, v := range res {
+		changePriceInvoiceGatewaysItemsEnum = append(changePriceInvoiceGatewaysItemsEnum, v)
+	}
+}
+
+func (m *ChangePriceInvoice) validateGatewaysItemsEnum(path, location string, value string) error {
+	if err := validate.EnumCase(path, location, value, changePriceInvoiceGatewaysItemsEnum, true); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (m *ChangePriceInvoice) validateGateways(formats strfmt.Registry) error {
+
+	if err := validate.Required("gateways", "body", m.Gateways); err != nil {
+		return err
+	}
+
+	for i := 0; i < len(m.Gateways); i++ {
+
+		// value enum
+		if err := m.validateGatewaysItemsEnum("gateways"+"."+strconv.Itoa(i), "body", m.Gateways[i]); err != nil {
+			return err
+		}
+
+	}
+
+	return nil
+}
+
+func (m *ChangePriceInvoice) validateCashier(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Cashier) { // not required
+		return nil
+	}
+
+	if m.Cashier != nil {
+		if err := m.Cashier.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("cashier")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ChangePriceInvoice) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ChangePriceInvoice) UnmarshalBinary(b []byte) error {
+	var res ChangePriceInvoice
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
+
+// ChangePriceInvoiceCashier Содержит контакты человека для приема оплат напрямую.
+//
+//
+// swagger:model ChangePriceInvoiceCashier
+type ChangePriceInvoiceCashier struct {
+
+	// username
+	// Required: true
+	Username *string `json:"username"`
+
+	// link
+	// Required: true
+	Link *string `json:"link"`
+}
+
+// Validate validates this change price invoice cashier
+func (m *ChangePriceInvoiceCashier) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateUsername(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateLink(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ChangePriceInvoiceCashier) validateUsername(formats strfmt.Registry) error {
+
+	if err := validate.Required("cashier"+"."+"username", "body", m.Username); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *ChangePriceInvoiceCashier) validateLink(formats strfmt.Registry) error {
+
+	if err := validate.Required("cashier"+"."+"link", "body", m.Link); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ChangePriceInvoiceCashier) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ChangePriceInvoiceCashier) UnmarshalBinary(b []byte) error {
+	var res ChangePriceInvoiceCashier
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
