# api/gen/restapi/operations/personal_area/change_lot_price_responses.go
@@ -1,0 +1,146 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package personal_area
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/bots-house/birzzha/api/gen/models"
+)
+
+// ChangeLotPriceOKCode is the HTTP code returned for type ChangeLotPriceOK
+const ChangeLotPriceOKCode int = 200
+
+/*ChangeLotPriceOK OK
+
+swagger:response changeLotPriceOK
+*/
+type ChangeLotPriceOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.OwnedLot `json:"body,omitempty"`
+}
+
+// NewChangeLotPriceOK creates ChangeLotPriceOK with default headers values
+func NewChangeLotPriceOK() *ChangeLotPriceOK {
+
+	return &ChangeLotPriceOK{}
+}
+
+// WithPayload adds the payload to the change lot price o k response
+func (o *ChangeLotPriceOK) WithPayload(payload *models.OwnedLot) *ChangeLotPriceOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the change lot price o k response
+func (o *ChangeLotPriceOK) SetPayload(payload *models.OwnedLot) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ChangeLotPriceOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// ChangeLotPriceBadRequestCode is the HTTP code returned for type ChangeLotPriceBadRequest
+const ChangeLotPriceBadRequestCode int = 400
+
+/*ChangeLotPriceBadRequest Bad Request
+
+swagger:response changeLotPriceBadRequest
+*/
+type ChangeLotPriceBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewChangeLotPriceBadRequest creates ChangeLotPriceBadRequest with default headers values
+func NewChangeLotPriceBadRequest() *ChangeLotPriceBadRequest {
+
+	return &ChangeLotPriceBadRequest{}
+}
+
+// WithPayload adds the payload to the change lot price bad request response
+func (o *ChangeLotPriceBadRequest) WithPayload(payload *models.Error) *ChangeLotPriceBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the change lot price bad request response
+func (o *ChangeLotPriceBadRequest) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ChangeLotPriceBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// ChangeLotPriceInternalServerErrorCode is the HTTP code returned for type ChangeLotPriceInternalServerError
+const ChangeLotPriceInternalServerErrorCode int = 500
+
+/*ChangeLotPriceInternalServerError Internal Server Error
+
+swagger:response changeLotPriceInternalServerError
+*/
+type ChangeLotPriceInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewChangeLotPriceInternalServerError creates ChangeLotPriceInternalServerError with default headers values
+func NewChangeLotPriceInternalServerError() *ChangeLotPriceInternalServerError {
+
+	return &ChangeLotPriceInternalServerError{}
+}
+
+// WithPayload adds the payload to the change lot price internal server error response
+func (o *ChangeLotPriceInternalServerError) WithPayload(payload *models.Error) *ChangeLotPriceInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the change lot price internal server error response
+func (o *ChangeLotPriceInternalServerError) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ChangeLotPriceInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
