# api/gen/restapi/operations/personal_area/create_change_price_payment_responses.go
@@ -1,0 +1,146 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package personal_area
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/bots-house/birzzha/api/gen/models"
+)
+
+// CreateChangePricePaymentCreatedCode is the HTTP code returned for type CreateChangePricePaymentCreated
+const CreateChangePricePaymentCreatedCode int = 201
+
+/*CreateChangePricePaymentCreated Created
+
+swagger:response createChangePricePaymentCreated
+*/
+type CreateChangePricePaymentCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.PaymentForm `json:"body,omitempty"`
+}
+
+// NewCreateChangePricePaymentCreated creates CreateChangePricePaymentCreated with default headers values
+func NewCreateChangePricePaymentCreated() *CreateChangePricePaymentCreated {
+
+	return &CreateChangePricePaymentCreated{}
+}
+
+// WithPayload adds the payload to the create change price payment created response
+func (o *CreateChangePricePaymentCreated) WithPayload(payload *models.PaymentForm) *CreateChangePricePaymentCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the create change price payment created response
+func (o *CreateChangePricePaymentCreated) SetPayload(payload *models.PaymentForm) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *CreateChangePricePaymentCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// CreateChangePricePaymentBadRequestCode is the HTTP code returned for type CreateChangePricePaymentBadRequest
+const CreateChangePricePaymentBadRequestCode int = 400
+
+/*CreateChangePricePaymentBadRequest Bad Request
+
+swagger:response createChangePricePaymentBadRequest
+*/
+type CreateChangePricePaymentBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewCreateChangePricePaymentBadRequest creates CreateChangePricePaymentBadRequest with default headers values
+func NewCreateChangePricePaymentBadRequest() *CreateChangePricePaymentBadRequest {
+
+	return &CreateChangePricePaymentBadRequest{}
+}
+
+// WithPayload adds the payload to the create change price payment bad request response
+func (o *CreateChangePricePaymentBadRequest) WithPayload(payload *models.Error) *CreateChangePricePaymentBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the create change price payment bad request response
+func (o *CreateChangePricePaymentBadRequest) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *CreateChangePricePaymentBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// CreateChangePricePaymentInternalServerErrorCode is the HTTP code returned for type CreateChangePricePaymentInternalServerError
+const CreateChangePricePaymentInternalServerErrorCode int = 500
+
+/*CreateChangePricePaymentInternalServerError Internal Server Error
+
+swagger:response createChangePricePaymentInternalServerError
+*/
+type CreateChangePricePaymentInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewCreateChangePricePaymentInternalServerError creates CreateChangePricePaymentInternalServerError with default headers values
+func NewCreateChangePricePaymentInternalServerError() *CreateChangePricePaymentInternalServerError {
+
+	return &CreateChangePricePaymentInternalServerError{}
+}
+
+// WithPayload adds the payload to the create change price payment internal server error response
+func (o *CreateChangePricePaymentInternalServerError) WithPayload(payload *models.Error) *CreateChangePricePaymentInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the create change price payment internal server error response
+func (o *CreateChangePricePaymentInternalServerError) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *CreateChangePricePaymentInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
